fix layout issue

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -77,7 +77,7 @@
   border-style: solid;
   border-radius: 15px;
   background-color: #F1F1F1;
-  width: 30%;
+  width: 30vh;
   margin: 10px;
   margin-left: 50px;
   text-align: center;
